prod/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
spec:
  rules:
  - host: mongo-express.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: mongo-express-service
            port: 
              name: default-port
